# colis-batch

./: .gitignore  Dockerfile  Makefile  colis-batch.opam  run.sh
old/batch/: colis_batch.ml  htmlReport.ml  htmlReport.mli
old/common/: report.ml  report.mli
old/package/: colis_package_bin.ml
old/package/lib/: colis_package.ml  htmlReport.mli
share/static/: style.css
share/template/: file.html  group.html  index.html
src/: batch.ml  constant.ml  contentsTable.ml  dune  engine.ml  extFilename.ml  extList.ml  extPervasives.ml  extResult.ml  extResult.mli  htmlReport.ml  htmlReport.mli  maintscript.ml  maintscript.mli  mapReduce.ml  options.ml  package.ml  package.mli  report.ml  reportHelpers.ml  scenarii.ml  scenariiHelper.ml  scenario.ml  scenarioEngine.ml  stats.ml
src/batch/: colis_batch.ml  contents.ml  contents.mli  contentsTable.ml  dune  htmlReport.ml  htmlReport.mli
src/common/: config.ml  dune  report.ml  report.mli
src/common/static/: style.css
src/config/: colis_config.ml  dune
src/exe/: colis_batch.ml  colis_batch.sh  colis_batch_analyse.ml  colis_batch_exe.ml  colis_batch_report.ml  colis_batch_write_report.ml  contents.ml  dune
src/ext/: colis_ext.ml  dune  extList.ml  extPervasives.ml  extString.ml
src/ext/bench/: bench_multiprocess.ml  dune
src/ext/lib/: colis_batch_ext.ml  colis_ext.ml  dune  extFilename.ml  extFilesystem.ml  extList.ml  extList.mli  extMultiProcess.ml  extMultiProcess.mli  extPervasives.ml  extResult.ml  extString.ml  extUnix.ml
src/lib/: colis_batch.ml  colis_batch.mli  colis_batch_config.ml  dune
src/lib/engine/: dune  maintscript.ml  package.ml  scenario.ml
src/lib/model/: dune  maintscript.ml  maintscript.mli  package.ml  package.mli  scenarii.ml  scenario.ml  scenario.mli  serialisable.ml
src/lib/report/: batch.ml  colis_batch_report.ml  dune  html.ml  package.ml  path.mli
src/lib/report/common/: batch.ml  colis_batch_report_common.ml  dune  meta.ml  package.ml  path.ml  path.mli
src/lib/report/html/: batch.ml  colis_batch_report_html.ml  common.ml  config.ml  dune  meta.ml  package.ml  scripts.ml
src/lib/report/html/static/: style.css
src/package/: cliReport.ml  colis_package.ml  colis_package_bin.ml  dune  engine.ml  htmlReport.ml  htmlReport.mli  maintscript.ml  maintscript.mli  package.ml  package.mli  report.ml  report.mli  scenarii.ml  scenario.ml  scenarioEngine.ml  stats.ml  textReport.ml
src/package/lib/: colis_package.ml  dune  htmlReport.ml  htmlReport.mli  maintscript.ml  maintscript.mli  package.ml  package.mli  report.ml  scenarii.ml  scenario.ml  scenario.mli  scenarioEngine.ml  textReport.ml
