opam-version: "2.0"

name: "CoLiS-batch"
version: "0.1"

synopsis: "Batch runner for CoLiS-Language"
description: """
Batch runner for CoLiS-Language
"""

homepage: "https://github.com/colis-anr/colis-batch"
bug-reports: "https://github.com/colis-anr/colis-batch/issues"

authors: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"

pin-depends: [
  [ "colis-language.dev" "git+https://github.com/colis-anr/colis-language.git" ]

  # We must add CoLiS-language's pinned dependencies
  [ "morbig.dev"   "git+https://github.com/colis-anr/morbig.git" ]
  [ "morsmall.dev" "git+https://github.com/colis-anr/morsmall.git" ]
  [ "why3.dev"     "git+https://gitlab.inria.fr/why3/why3.git#79774910" ]
]

depends: [
  "colis-language"
  "dune"                     {build}
  "lwt"
  "mustache"
  "ppx_protocol_conv_jsonm"
]
