opam-version: "2.0"

name: "CoLiS-batch"
version: "0.1"

synopsis: "Batch runner for CoLiS-Language"
description: """
Batch runner for CoLiS-Language
"""

homepage: "https://github.com/colis-anr/colis-batch"
bug-reports: "https://github.com/colis-anr/colis-batch/issues"

authors: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"

depends: [
  "colis-language"
  "dune"            {build}
  "lwt"
  "lwt_ppx"         {build}
  "ppx_blob"        {build}
]
