(install
 (section bin)
 (files
  (colis_batch.sh as colis-batch)))

(executable
 (name colis_batch_analyse)
 (public_name colis-batch-analyse)
 (modules colis_batch_analyse)
 (libraries colis-batch))

(executable
 (name colis_batch_report)
 (public_name colis-batch-report)
 (modules colis_batch_report)
 (libraries colis-batch))
