(install
 (section bin)
 (files
  (colis_batch.sh as colis-batch)))

(executable
 (name colis_batch_analyse)
 (public_name colis-batch-analyse)
 (modules colis_batch_analyse)
 (libraries colis-batch))

(executable
 (name colis_batch_write_report)
 (public_name colis-batch-write-report)
 (modules colis_batch_write_report)
 (libraries colis-batch))
